@@ -27,7 +27,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mjr] Add missing API support for searchTags API (Bug #13361).
+* [mjr] Fix issue that caused notes to be tagged with a broken username.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1216,7 +1217,8 @@
    <date>2014-07-08</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mjr] Add missing API support for searchTags API (Bug #13361).
+* [mjr] Fix issue that caused notes to be tagged with a broken username.
    </notes>
   </release>
  </changelog>
